--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -14,8 +14,8 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+        git config --global user.email "19215261@bsi.ac.id"
+        git config --global user.name "azrielbsi"
 
     - name: Install curl and jq
       run: |
