--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -3,7 +3,7 @@ name: Update README with Weather
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '* */3 * * *'
 
 jobs:
   update-readme:
